* Fix character encoding issue * Ensure document water mark is behind text

--- a/app/assets/stylesheets/layout/_document_page.scss
+++ b/app/assets/stylesheets/layout/_document_page.scss
@@ -55,7 +55,10 @@
     .content-block {
       padding: 35px 130px 20px 30px !important;
 
-      #fulltext_content_area { z-index: 200; }
+      #fulltext_content_area {
+        z-index: 200;
+        position: relative;
+      }
 
       p {
         font-family: $font-family-serif;
